--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Git Assignment</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Hello, Git!</h1>
